# Edo

./: .gitignore  CMakeLists.txt  LICENSE
cmake/Modules/: FindEdo.cmake
doc/: TODO
edo-base/: CMakeLists.txt
edo-base/include/: bytebuf.hpp  configuration.hpp  misc.hpp  strings.hpp  types.hpp
edo-base/src/: bytebuf.cpp  configuration.cpp  error.cpp  misc.cpp
edo-ext/: CMakeLists.txt
edo-ext/include/: process_info.hpp  win_process.hpp
edo-ext/src/: process_info.cpp  win_process.cpp
include/edo/base/: app.hpp  bytebuf.hpp  configuration.hpp  endian.hpp  error.hpp  misc.hpp  strings.hpp  types.hpp
include/edo/ext/: permission.hpp  process_info.hpp  win_process.hpp
src/: CMakeLists.txt
src/base/: CMakeLists.txt  app.cpp  bytebuf.cpp  configuration.cpp  error.cpp  misc.cpp
src/ext/: CMakeLists.txt  process_info.cpp  win_process.cpp
test/: CMakeLists.txt
test/base/: bytebuf_test.cpp  configuration_test.cpp  endian_test.cpp  main.cpp  misc_test.cpp
tests/: CMakeLists.txt
tests/base/: CMakeLists.txt  bytebuf_test.cpp  configuration_test.cpp  endian_test.cpp  misc_test.cpp
tests/edo-base/: CMakeLists.txt
tests/edo-base/src/: bytebuf_test.cpp  configuration_test.cpp  endian_test.cpp  main.cpp  misc_test.cpp
tests/edo-ext/: CMakeLists.txt
tests/edo-ext/src/: process_info_test.cpp
tests/ext/: CMakeLists.txt  main.cpp  process_info_test.cpp
tests/ext/it/: main.cpp  win_process_it_test.cpp
